# Sentry-USB-Rusty

./: .gitattributes  .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  build-image.sh  build.sh  check.sh  install-pi.sh
.cargo/: config.toml
.github/workflows/: build.yml
crates/api/: Cargo.toml
crates/cloud_crypto/: Cargo.toml
crates/cloud_crypto/src/: aad.rs  aead.rs  blob.rs  credentials.rs  errors.rs  ids.rs  kdf.rs  lib.rs  x25519.rs
crates/cloud_crypto/tests/: aad-vectors.json  byte_vectors.rs
crates/cloud_uploader/: Cargo.toml
crates/config/: Cargo.toml
crates/cttseraser/: Cargo.toml
crates/cttseraser/src/: main.rs
crates/drives/: Cargo.toml
crates/notify/: Cargo.toml
crates/notify/src/: discord.rs  gotify.rs  ifttt.rs  lib.rs  matrix.rs  ntfy.rs  pushover.rs  sentry_connect.rs  signal.rs  slack.rs  sns.rs  telegram.rs  webhook.rs
crates/sentryusb/: Cargo.toml
crates/setup/: Cargo.toml
crates/shell/: Cargo.toml
crates/usb_gadget/: Cargo.toml
crates/ws/: Cargo.toml
pi-gen-sources/: Readme.md  pi-gen-config  pi-gen-config-32bit  prepare.sh
pi-gen-sources/00-sentryusb-tweaks/: 00-packages  00-run.sh
run/: archiveloop  auto.sentryusb  auto.www  awake_start  awake_stop  disable_gadget.sh  enable_gadget.sh  make_snapshot.sh  post-archive-process.sh  release_snapshot.sh  remountfs_rw  send-live-activity  send-push-message  temperature_monitor
run/cifs_archive/: archive-clips.sh  copy-music.sh
run/nfs_archive/: archive-clips.sh
run/rclone_archive/: archive-clips.sh
run/rsync_archive/: archive-clips.sh  copy-music.sh
server/ble/: com.sentryusb.ble.conf  sentryusb-ble.py  sentryusb-ble.service
setup/generic/: install.sh
setup/pi/: avahi-sentryusb.service  configure-ap.sh  configure-automount.sh  configure-rtc.sh  configure-ssh.sh  configure-web.sh  configure.sh  (+7 more)
tools/: debian-resizefs.sh  resize-image.sh  updatemutableinodes.sh
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
wiki/: ArchiveMethods.md  DeveloperGuide.md  FAQ.md  GettingStarted.md  Home.md  Notifications.md  SentryConnect.md  SetupWizard.md  Troubleshooting.md
(+135 files in other folders)
